# temporal_ex

./: .gitignore  AGENTS.md  README.md  mix.exs
backlog/: config.yml
backlog/tasks/: tx-001 - Production-readiness-hardening-for-Temporal-Core-beta.md  tx-002 - Add-async-workflow-update-handles.md  tx-003 - Add-signal-with-start-and-update-with-start-client-operations.md  tx-004 - Add-workflow-visibility-and-history-client-APIs.md  tx-005 - Add-backend-conformance-coverage-for-client-operations.md  tx-006 - Add-deterministic-wait_condition-workflow-primitive.md  tx-007 - Add-child-workflow-and-external-workflow-primitives.md  tx-008 - Round-out-workflow-start-options-and-metadata.md  tx-009 - Complete-Temporal-failure-decoder-coverage.md  tx-010 - Expand-cancellation-integration-coverage.md  tx-011 - Evaluate-remaining-workflow-primitive-parity.md  tx-012 - Automate-Temporal-Core-descriptor-generation.md  tx-013 - Evaluate-remaining-native-client-conversion-ownership.md
config/: config.exs
docs/: backend.md  core.md  core_testing.md  failure_model_proposal.md  implementation_principles.md  implementation_slice.md  native.md  production_readiness_review.md  programming_model.md  public_api.md  review_gates.md  scheduler_and_replay.md  sdk_overview.md  server.md  temporal_core_mapping.md  testing.md
lib/: temporalex.ex
lib/temporalex/: activity.ex  backend.ex  client.ex  error.ex  failure.ex  native.ex  (+5 more)
native/temporalex_nif/: Cargo.toml
native/temporalex_nif/src/: lib.rs
test/: temporalex_test.exs  test_helper.exs
test_support/: temporal_dev_server.ex
(+33 files in other folders)
