[package]
name = "temporalex_nif"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
prost = "0.14"
prost-types = { version = "0.7", package = "prost-wkt-types" }
rustler = "=0.37.3"
temporalio-client = { path = "../../../temporal-sdk-core/crates/client", features = ["core-based-sdk"] }
temporalio-common = { path = "../../../temporal-sdk-core/crates/common" }
temporalio-sdk-core = { path = "../../../temporal-sdk-core/crates/sdk-core" }
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
url = "2"
